Solved gap problem

--- a/css/styles.css
+++ b/css/styles.css
@@ -405,8 +405,8 @@ h5 {
 	background: #FFFFFF;
 	box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.08);
 }
-.advantage_content img:hover{
-	fill: #DEC377;
+.single_advantage:hover> .advantage_content img{
+    filter: invert(87%) sepia(23%) saturate(787%) hue-rotate(349deg) brightness(91%) contrast(90%);
 }
 .advantage_content{
 	padding: 40px 20px 40px;
@@ -690,7 +690,7 @@ h5 {
 	justify-self: center;
 	display: flex;
 	justify-content: space-between;
-	gap: 10px;
+	margin: 0 -5px;
 }
 .arrows_rev{
 	margin-top: 41px;
@@ -705,7 +705,7 @@ h5 {
 	cursor: pointer;
 	height: 10px;
 	width: 10px;
-	margin: 0;
+	margin: 0 5px;
 	border-radius: 50%;
 	display: inline-block;
 	background-color: rgba(0, 0, 0, 0.1);;
@@ -1244,6 +1244,9 @@ h5 {
 	padding: 40px 20px 40px;
 	text-align: center;
 }
+.single_plus:hover> .plus_content img{
+	filter: invert(87%) sepia(23%) saturate(787%) hue-rotate(349deg) brightness(91%) contrast(90%);
+}
 
 .plus_content p {
 	font-family: Lato;
@@ -1535,10 +1538,19 @@ footer .wrapper{
 
 .social_icons {
 	margin-top: 52px;
+	margin-bottom: 22px;
 	display: inline-flex;
 	flex-wrap: wrap;
-	gap: 18px;
-	margin-bottom: 22px;
+}
+.first_social{
+	margin-right: 9px;
+}
+.middle_social{
+	margin-left: 9px;
+	margin-right: 9px;
+}
+.last_social{
+	margin-left: 9px;
 }
 .arrow_div{
 	margin-top: 30px;
@@ -1602,11 +1614,13 @@ footer .wrapper{
 .offices_row{
 	display: inline-flex;
 	flex-wrap: wrap;
-	gap: 35px;
 }
 .column_two_one, .column_two_two, .column_two_three{
 	width:200px;
 	margin-top: 29px;
+}
+.column_two_one, .column_two_two{
+	margin-right: 35px;
 }
 .office_title {
 	font-family: Commissioner;
